lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:1: error: not found: type segment
var segmentPose = new segment(new Point(0,0), new Point(1,0))
                      ^